[project]
name = "agno-ai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.4.6",
    "anthropic>=0.51.0",
    "fastapi>=0.115.12",
    "fastapi-utils>=0.8.0",
    "googlesearch-python>=1.3.0",
    "markdown>=3.8",
    "pycountry>=24.6.1",
    "pytest>=8.3.5",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.34.2",
    "weasyprint[recommended]>=65.1",
    "yfinance>=0.2.59",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
]
