[project]
name = "agno-ai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.4.6",
    "anthropic>=0.51.0",
    "crawl4ai>=0.4.24",
    "fastapi>=0.115.12",
    "fastapi-utils>=0.8.0",
    "google-genai>=1.24.0",
    "googlesearch-python>=1.3.0",
    "markdown>=3.8",
    "playwright>=1.52.0",
    "psycopg2>=2.9.10",
    "pycountry>=24.6.1",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.34.2",
    "weasyprint>=65.1",
    "yfinance>=0.2.59",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
]
